🩹 : correction pour les navigateurs ne supportant pas gap (2)

--- a/src/ressources/css/fiche.css
+++ b/src/ressources/css/fiche.css
@@ -55,7 +55,7 @@ div.bloc-info > div {
   grid-template-columns: auto 1fr;
   column-gap: 1rem;
   width: 100%;
-  align-items: baseline;
+  align-items: center;
 }
 
 div.bloc-info > div::before {
@@ -111,22 +111,19 @@ div.carte iframe {
 }
 
 @media (max-width: 1099px) {
-  @supports (not(row-gap: 1.4rem)) and (not(gap: 1.4rem)) {
-    body > *:not(:last-child) {
-      margin-bottom: 1.4rem;
-    }
-  }
-
   body {
     display: flex;
     min-height: -webkit-fill-available;
     flex-direction: column;
-    row-gap: 1.4rem;
-    gap: 1.4rem;
+  }
+
+  body > *:not(:first-child) {
+    margin-top: 1.4rem;
   }
 
   h1 {
     font-size: 2.8rem;
+    margin-bottom: 0;
   }
 
   h1 > a.retour {
@@ -152,12 +149,16 @@ div.carte iframe {
 }
 
 @media (max-width: 767px) {
-  h1 {
-    margin: 0;
+  body > h1:first-of-type {
+    margin-top: 0.8rem;
   }
 
   div.bloc-info {
     flex-direction: column;
+  }
+
+  div.bloc-info > *:not(:first-child) {
+    margin-top: 1.4rem;
   }
 }
 
