--- a/src/ressources/css/recherche.css
+++ b/src/ressources/css/recherche.css
@@ -26,3 +26,14 @@ div#resulats-recherche a:hover {
   color: var(--couleur-ecriture);
   background-color: var(--couleur-fond-variante-1);
 }
+
+@media (max-width: 767px) {
+  div#resulats-recherche:not(:empty) {
+    padding: 1rem 0;
+  }
+
+  div#resulats-recherche a,
+  div#resulats-recherche span {
+    padding: 1rem 1.5rem;
+  }
+}
